2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ServiceLocator.cs: Removed local computers from view

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/TargetWindow.cs: debug
	* src/SendingHandler.cs: multiple files and folders
	* src/RequestHandler.cs: Multiple files and folders
	* src/UriList.cs: new class for drag and drop
	* src/GiverService.cs: Debug
	* src/Protocol.cs: Support for multiple files and folders
	* src/Application.cs, src/Makefile.am, src/TargetService.cs, giver.mdp:
	  Updated drag and drop support

2007-06-28  Calvin Gaisford <calvinrg@gmail.com> 

	* src/TargetWindow.cs, src/Application.cs, src/TargetService.cs:
	  Updated to save window and hide it

2007-06-28  Scott Reeves <sreeves@novell.com> 

	* src/PreferencesDialog.cs: store name, location, partial type

2007-06-28  Scott Reeves <sreeves@novell.com> 

	* src/PreferencesDialog.cs, data/glade/giver-prefs.glade: Finish
	  loading preferences

2007-06-28  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ServiceInfo.cs: Added ID
	* src/TargetWindow.cs: New Window to choose targets
	* src/ServiceLocator.cs: Modified Event names to make sense
	* src/Application.cs: Modified events and removed menu that shows
	  targets
	* src/Makefile.am: Added new widgets to build
	* src/TargetService.cs: New Widget to show services
	* giver.mdp: Added TargetService and TargetWindow Widgets

2007-06-28  Scott Reeves <sreeves@novell.com> 

	* src/PreferencesDialog.cs, src/Preferences.cs,
	  data/glade/giver-prefs.glade, data/glade/Makefile.am,
	  data/glade/gravatar.gif: updated prefs dialog, read values

2007-06-28  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ServiceInfo.cs, src/GiverMenuItem.cs, src/SendingHandler.cs:
	  Renamed Service to ServiceInfo
	* src/ServiceLocator.cs: Renamed Service to ServiceInfo and threaded
	  the resolver to get icons on a thread
	* src/Application.cs: Added stock quit menu item
	* src/Makefile.am: Added ServiceInfo
	* giver.mdp: Added ServiceInfo class
